# swiftship-server

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  database.py  deps.py  security.py
app/models/: __init__.py  enums.py  shipment.py  tracking.py  user.py  vehicle.py
app/routers/: auth.py  shipments.py  tracking.py  users.py  vehicles.py
app/schemas/: shipment.py  tracking.py  user.py  vehicle.py
app/services/: shipment_service.py  user_service.py
scripts/: seed.py
tests/: conftest.py  test_auth.py  test_shipments.py
